config("fakefingerprint_config") {
  defines = [
    "WIN32_LEAN_AND_MEAN ",
  ]
  include_dirs = [
    "//third_party/MySQL/include/",
    "//third_party/MySQL/include/mysql++/",
  ]

  lib_dirs = [
    "//third_party/MySQL/x86_64/lib",
    "//third_party/MySQL/x86_64/lib/vs14",
  ]

  libs = [
    "libmysql.lib",
    "mysqlclient.lib",
  ]
  
}

static_library("fakefingerprint") {
  sources = [
    "FakeFingerprint.cc",
  ]
  
  deps = [
    "//base",
    "//base/third_party/dynamic_annotations",
    "//device/gamepad/public/mojom",
    "//fakefingerprint/public/mojom",
    "//mojo/public/cpp/system",
  ]
  
  all_dependent_configs = [
    ":fakefingerprint_config"
  ]
}



