# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("server") {
  if (is_mac) {
    public_deps = [ "//chrome/updater/server/mac" ]
  }
  if (is_win) {
    public_deps = [ "//chrome/updater/server/win" ]
  }
}
