# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

static_library("android") {
  sources = [
    "certificate_viewer_android.cc",
    "cookie_controls_status.h",
  ]
  deps = [
    "//base",
    "//components/page_info/android:jni_headers",
    "//components/strings:components_strings_grit",
    "//net:net",
    "//third_party/boringssl",
    "//ui/base:base",
  ]
}

java_cpp_enum("cookie_controls_status_javagen") {
  sources = [ "cookie_controls_status.h" ]
}

android_resources("java_resources") {
  sources = [
    "java/res/layout/cookie_controls_view.xml",
    "java/res/layout/page_info.xml",
    "java/res/layout/page_info_permission_row.xml",
    "java/res/values/dimens.xml",
    "java/res/values/ids.xml",
  ]
  custom_package = "org.chromium.components.page_info"
  deps = [
    "//components/browser_ui/strings/android:browser_ui_strings_grd",
    "//ui/android:ui_java_resources",
  ]
}

android_library("java") {
  sources = [
    "java/src/org/chromium/components/page_info/CertificateViewer.java",
    "java/src/org/chromium/components/page_info/CookieControlsView.java",
    "java/src/org/chromium/components/page_info/PageInfoView.java",
  ]

  deps = [
    ":java_resources",
    "//base:base_java",
    "//base:jni_java",
    "//content/public/android:content_java",
    "//third_party/android_deps:android_support_v7_appcompat_java",
    "//third_party/android_deps:androidx_annotation_annotation_java",
    "//ui/android:ui_java",
  ]

  srcjar_deps = [ ":cookie_controls_status_javagen" ]
  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]
}

generate_jni("jni_headers") {
  sources =
      [ "java/src/org/chromium/components/page_info/CertificateViewer.java" ]
}
