# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

generate_jni("jni") {
  sources =
      [ "java/src/org/chromium/components/permissions/PermissionUmaUtil.java" ]
}

android_resources("java_resources") {
  resource_dirs = [ "res" ]
  custom_package = "org.chromium.components.permissions"
}

android_library("java") {
  sources =
      [ "java/src/org/chromium/components/permissions/PermissionUmaUtil.java" ]
  deps = [ "//base:base_java" ]
}
