# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "java/src/org/chromium/chrome/browser/profile_card/ContentPreviewPostData.java",
    "java/src/org/chromium/chrome/browser/profile_card/EntryPointCoordinator.java",
    "java/src/org/chromium/chrome/browser/profile_card/NavigationDelegate.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardCoordinator.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardData.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardUtil.java",
  ]

  deps = [ "//third_party/android_deps:androidx_annotation_annotation_java" ]
}
