# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Common namespace rewrites for all polymer_modulizer() or js_modulizer()
# targets in Settings.
settings_namespace_rewrites = [
  "cr_slider.SliderTick|SliderTick",
  "settings.AboutPageBrowserProxy|AboutPageBrowserProxy",
  "settings.AppearanceBrowserProxy|AppearanceBrowserProxy",
  "settings.DefaultBrowserBrowserProxy|DefaultBrowserBrowserProxy",
  "settings.DownloadsBrowserProxy|DownloadsBrowserProxy",
  "settings.EDIT_STARTUP_URL_EVENT|EDIT_STARTUP_URL_EVENT",
  "settings.ExtensionControlBrowserProxy|ExtensionControlBrowserProxy",
  "settings.FontsBrowserProxy|FontsBrowserProxy",
  "settings.GlobalScrollTargetBehavior|GlobalScrollTargetBehavior",
  "settings.LifetimeBrowserProxy|LifetimeBrowserProxy",
  "settings.MinimumRoutes|MinimumRoutes",
  "settings.OnStartupBrowserProxy|OnStartupBrowserProxy",
  "settings.pageVisibility|pageVisibility",
  "Settings.PrefUtil.prefToString|prefToString",
  "Settings.PrefUtil.stringToPrefValue|stringToPrefValue",
  "settings.PrintingBrowserProxy|PrintingBrowserProxy",
  "settings.Route|Route",
  "settings.routes|routes",
  "settings.SearchEnginesBrowserProxy|SearchEnginesBrowserProxy",
  "settings.StartupUrlsPageBrowserProxy|StartupUrlsPageBrowserProxy",
  "settings.SystemPageBrowserProxy|SystemPageBrowserProxy",
  "settings.RouteObserverBehavior|RouteObserverBehavior",

  "action_link.m.js|action_link.js",

  # TODO(1026426): Add more entries above as needed.
]

settings_auto_imports = [
  "chrome/browser/resources/settings/controls/pref_control_behavior.html|PrefControlBehavior",
  "chrome/browser/resources/settings/controls/settings_boolean_control_behavior.html|SettingsBooleanControlBehavior",
  "chrome/browser/resources/settings/downloads_page/downloads_browser_proxy.html|DownloadsBrowserProxy,DownloadsBrowserProxyImpl",
  "chrome/browser/resources/settings/extension_control_browser_proxy.html|ExtensionControlBrowserProxyImpl,ExtensionControlBrowserProxy",
  "chrome/browser/resources/settings/global_scroll_target_behavior.html|GlobalScrollTargetBehavior",
  "chrome/browser/resources/settings/i18n_setup.html|loadTimeData",
  "chrome/browser/resources/settings/prefs/prefs_behavior.html|PrefsBehavior",
  "chrome/browser/resources/settings/printing_page/printing_browser_proxy.html|PrintingBrowserProxyImpl",
]
