# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("mac") {
  sources = [
    "server.h",
    "server.mm",
    "service_delegate.h",
    "service_delegate.mm",
    "service_protocol.h",
  ]

  deps = [
    "//base",
    "//chrome/updater:base",
    "//chrome/updater:version_header",
  ]
}
