# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
}

source_set("feed_core_v2") {
  sources = [
    "feed_stream.cc",
    "feed_stream.h",
    "feed_stream_api.h",
    "feed_stream_background.cc",
    "feed_stream_background.h",
  ]
  deps = [
    "//components/feed/core:feed_core",
    "//components/feed/core/common:feed_core_common",
    "//components/offline_pages/task:task",
    "//components/prefs",
  ]

  public_deps = [ "//base" ]
}

source_set("core_unit_tests") {
  testonly = true
  sources = [ "feed_stream_unittest.cc" ]
  deps = [
    ":feed_core_v2",
    "//base",
    "//base/test:test_support",
    "//components/feed/core:feed_core",
    "//components/feed/core/common:feed_core_common",
    "//components/prefs:test_support",
    "//testing/gtest",
  ]
}
