# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")

js_type_check("closure_compile") {
  testonly = true
  deps = [
    ":background",
    ":file_dialog",
  ]
}

js_library("background") {
  testonly = true
  deps = [
    "//ui/file_manager/base/js:volume_manager_types",
    "//ui/file_manager/integration_tests:remote_call",
    "//ui/file_manager/integration_tests:test_util",
  ]
}

js_library("file_dialog") {
  testonly = true
  deps = []
}
