# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "java/src/org/chromium/chrome/browser/profile_card/ContentPreviewPostView.java",
    "java/src/org/chromium/chrome/browser/profile_card/EntryPointCoordinatorImpl.java",
    "java/src/org/chromium/chrome/browser/profile_card/EntryPointView.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardCoordinatorImpl.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardMediator.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardProperties.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardView.java",
    "java/src/org/chromium/chrome/browser/profile_card/ProfileCardViewBinder.java",
  ]

  deps = [
    ":java_resources",
    "//base:base_java",
    "//chrome/browser/profile_card/android:java",
    "//ui/android:ui_full_java",
  ]
}

android_resources("java_resources") {
  custom_package = "org.chromium.chrome.browser.profile_card.internal"
  resource_dirs = [ "java/res" ]
}
