# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//tools/polymer/polymer.gni")

js_type_check("closure_compile") {
  is_polymer3 = true
  deps = [ ":app" ]
}

js_library("app") {
  deps = [
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
  ]
}

polymer_modulizer("app") {
  js_file = "app.js"
  html_file = "app.html"
  html_type = "v3-ready"
}

group("polymer3_elements") {
  deps = [ ":app_module" ]
}
