# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")

js_type_check("closure_compile") {
  deps = [
    ":safety_check_browser_proxy",
    ":safety_check_page",
  ]
}

js_library("safety_check_page") {
  deps = [
    ":safety_check_browser_proxy",
    "//ui/webui/resources/js:assert",
    "//ui/webui/resources/js:i18n_behavior",
    "//ui/webui/resources/js:web_ui_listener_behavior",
  ]
  externs_list = [ "$externs_path/chrome_send.js" ]
}

js_library("safety_check_browser_proxy") {
  deps = [ "//ui/webui/resources/js:cr" ]
}
